# sales-training-qoder

./: .env.example  .gitignore  =2.6.3  =3.2.4  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CONTEXT.md  DELIVERY_STATE.md  FULL_STACK_AUDIT_REPORT_2025.md  PROJECT_AUDIT_REPORT.md  PROJECT_COMPLETION_REPORT.md  SYSTEM_AUDIT_REPORT.md  TEST_SUMMARY.md  WEB_SOCKET_TEST_REPORT.md  WORKFLOW.md  alembic.ini  api-spec.md  api_routing_audit.md  findings.md  oss配置.md  package.json  progress.md  prometheus.yml  pyproject.toml  pyrightconfig.json  skills-lock.json  start-all.sh  task_plan.md  test_websocket.py  test_websocket_detailed.py  tests  type_debt_baseline.md  实时语音识别.md  语音模型文档.md  项目代码审计与产品迭代建议.md
backend/: .env.example  AGENTS.md  alembic.ini  coverage.json  process_pending_docs.py  pyproject.toml  pyrightconfig.json  reprocess_failed_docs.py  requirements.txt  reset_db.py  test_asr_direct.py  test_asr_manual.py  test_asr_official.py  test_knowledge_e2e.py  test_services.py  test_websocket.py  usercustomize.py  venv
backend/.github/workflows/: nfr-performance-check.yml
backend/.mypy_cache/3.11/: cache.db-shm  cache.db-wal
backend/alembic/: env.py
backend/alembic/versions/: 20260111_1200_001_agent_platform_tables.py  20260112_1400_002_model_configs_table.py  20260113_add_user_role.py  20260114_1841_3752e148c0de_add_tts_config_to_persona.py  20260204_0800_005_prompt_templates.py  20260204_0900_006_staged_evaluation.py  20260204_1656_f0afc3841ba3_merge_heads.py  20260204_1900_008_composite_index_sessions.py  20260205_0100_009_add_report_columns.py  20260210_1100_010_voice_runtime_policies.py  20260210_1400_011_model_config_default_unique.py  20260211_1200_012_support_role.py  20260212_0000_013_add_report_generation_status.py  20260215_2300_014_presentation_ai_policy.py  20260216_0100_015_persona_policy_persona_centered.py  20260221_2000_016_add_effectiveness_snapshot.py  20260225_1000_017_add_content_hash_to_knowledge_documents.py  20260314_1200_018_expand_knowledge_document_file_types.py  20260317_2200_019_stepfun_default_model_r11.py  20260317_2310_020_add_transcript_metadata_to_conversation_messages.py  20260326_1000_021_add_manager_interventions.py  20260328_1000_022_add_session_audio_segments.py  20260331_1100_023_knowledge_answer_control_plane.py  20260401_1836_01240702c090_add_settings_to_knowledge_bases.py  20260402_1400_024_rag_profiles_table.py  20260402_1800_025_unified_retrieval_strategy.py  20260408_1718_026_password_reset_tokens.py  20260411_2235_027_password_reset_lifecycle_delivery.py  20260412_0315_028_password_reset_single_active_token.py  20260413_1040_029_explicit_legacy_startup_repairs.py  20260416_0023_ae1dbf12bd03_canonicalize_report_evaluation_tables.py  20260420_1030_030_user_training_preferences.py  20260421_0630_031_user_presentation_progress.py  20260421_0645_032_growth_infrastructure.py  20260424_1100_033_business_rule_configs.py  20260424_1100_033_scoring_rulesets.py  20260424_1106_w6_highlight_review_sharing.py  20260428_0917_034_add_audio_archival_flags.py  20260430_0810_035_merge_post_growth_heads.py  20260501_0400_036_comprehensive_report_scoring_metadata.py  (+29 more)
backend/backend/: README.md
backend/scripts/: bootstrap_auth_admin.py  bootstrap_smoke_practice_evidence.py  migrate_prompts.py  repair_legacy_schema.py  seed_knowledge_answer_config.py  verify_aliyun_config.py
backend/src/: app_factory.py  app_lifespan.py  http_routes.py  main.py  router_registry.py  websocket_routes.py
backend/src/agent/: __init__.py  context.py  models.py  schemas.py
backend/src/common/: AGENTS.md  config.py
backend/test-results/: nfr-report.html  nfr-report.json  nfr-report.md
backend/tests/: AGENTS.md  conftest.py
(+2628 files in other folders)
