[project]
name = "ai-practice-backend"
version = "1.0.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "haystack-ai>=2.0.0",
    # Targeted pytest collection imports retrieval/auth modules directly.
    "rank_bm25>=0.2.2",
    "PyJWT[crypto]>=2.10.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806", "N803", "UP042", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
explicit_package_bases = true
plugins = ["pydantic.mypy"]
[[tool.mypy.overrides]]
module = ["funasr.*", "edge_tts.*", "chromadb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=48 --import-mode=importlib"
markers = [
    "contract: API contract tests",
    "integration: Integration tests",
    "performance: Performance and latency tests",
]
